# Shred_Graphique

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
docs/: DEV_CONTEXT.md  USER_GUIDE.md  chat.md
packaging/: build_deb.sh  shred-graphique.desktop  shred-graphique.policy
scripts/: deps.sh  install-dev.sh
src/: disk.rs  logger.rs  main.rs  paths.rs  shred.rs  system.rs  ui.rs
