[package]
name = "shred-graphique"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = "0.9"
glib = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
regex = "1.10"
dirs = "5.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[[bin]]
name = "shred-graphique"
path = "src/main.rs"

[[bin]]
name = "shred-graphique-helper"
path = "src/bin/shred-graphique-helper.rs"
